k8s/repo-fspin-org-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-fspin-org-deployment
spec:
  selector:
    matchLabels:
      app: repo
  replicas: 1
  template:
    metadata:
      labels:
        app: repo
    spec:
      containers:
      - name: repo-nginx
        image: gcr.io/fspin36-1d2e88cf18/fspin-repo-server
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /mirror
          name: fspin-mirror-storage
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
      volumes:
      - name: fspin-mirror-storage
        gcePersistentDisk:
          pdName: fspin-mirror-storage
          fsType: ext4
          readOnly: true
