k8s/repo-fspin-org-service.yaml
apiVersion: apps/v1
kind: Service
apiVersion: v1
metadata:
  name: repo-fspin-org-service
spec:
  selector:
    app: repo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
