k8s/repo-fspin-org-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-fspin-org-ingress
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - repo.fspin.org
    secretName: repo-fspin-org-tls
  rules:
  - host: repo.fspin.org
    http:
      paths:
      - backend:
          serviceName: repo-fspin-org-service
          servicePort: 80
        path: /
