k8s/repo-retry-fspin-org-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-retry-fspin-org-ingress
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - repo-retry.fspin.org
    secretName: repo-retry-fspin-org-tls
  rules:
  - host: "repo-retry.fspin.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: repo-fspin-org-service
            port:
              number: 80
